Flicker Bug on picker and selector

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
-@import 'antd/dist/reset.css';
-@import './styles/theme.css';
+@import "antd/dist/reset.css";
+@import "./styles/theme.css";
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -12,7 +12,7 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -77,11 +77,11 @@ code {
   h1 {
     font-size: 24px !important;
   }
-  
+
   h2 {
     font-size: 20px !important;
   }
-  
+
   h3 {
     font-size: 18px !important;
   }
@@ -463,6 +463,7 @@ code {
 }
 
 /* Avoid layout-related transition flickers */
-* {
+.ant-picker-dropdown,
+.ant-select-dropdown {
   transition: color 0.2s ease, background-color 0.2s ease, transform 0.2s ease;
 }
